--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "autoprefixer": "latest",
     "esbuild": "^0.18.17",
     "flowbite": "^1.8.1",
+    "jquery": "^3.7.0",
     "postcss": "latest",
     "tailwindcss": "^3.3.3"
   },
