--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
     "autoprefixer": "latest",
+    "datatables.net-dt": "^1.13.6",
     "esbuild": "^0.18.17",
     "flowbite": "^1.8.1",
     "jquery": "^3.7.0",
